--- a/views/admin/forms/productupdate.ejs
+++ b/views/admin/forms/productupdate.ejs
@@ -48,6 +48,7 @@
         <input onchange="cropper(3)" id="image3" type="file" accept="image/*">
         <img style="display: none;" src="" alt="" id="prev3">
       </div>
+      <p class="text-danger" id="prducter"></p> 
       <button type="submit" class="btn btn-primary mr-2">Submit</button>
     </form>
   </div>
