--- a/views/admin/nav/catogory.ejs
+++ b/views/admin/nav/catogory.ejs
@@ -20,7 +20,7 @@
                   <% } %> 
                   id="row<%= index %>">
                     <td><%= category.name %></td>
-                    <td><%= category.descr %></td>
+                    <td style="width: 400px; white-space: normal; word-wrap: break-word;"><%= category.descr %></td>
                     
                     <td><%= category.createdAt %></td>
                     <td><%= category?.updatedAt %></td>
