--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -11,7 +11,7 @@
   </head>
   <body class="img js-fullheight" style="background-color: black;">
     <section class="ftco-section">
-      <div class="container">
+      <div  class="container" >
         <div class="row justify-content-center">
           <div class="col-md-6 text-center mb-5">
             <h2 class="heading-section title" style="color: white;">Login</h2>
@@ -23,23 +23,25 @@
               <h5 class="mb-4 text-center" onclick="addInputs()" style="color: white;">Don't have an account?</h5>
               <form action="/user/login" method="post" class="signin-form form">
                 <div class="form-group">
-                  <input name="email" id="email-field" type="email" class="form-control" placeholder="Email" required>
+                    <input name="email" id="email-field" type="email" class="form-control" placeholder="Email">
                 </div>
+                <p id="errp" class="text-center text-danger"></p>
                 <div class="form-group">
-                  <input name="password" id="password-field" type="password" class="form-control" placeholder="Password" required>
-                  <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
-                </div>
-                <p id="errp" class="text-center text-danger"><%= error %></p>
-                <div id="btn" class="form-group">
-                  <button id="bb" type="submit" class="form-control btn btn-primary submit px-3">Login</button>
+                    <input name="password" id="password-field" type="password" class="form-control" placeholder="Password">
+                    <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                 </div>
                 <p id="errp2" class="text-center text-danger"></p>
-                <div class="form-group d-md-flex">
-                  <div class="w-100 text-md-right">
-                    <a class="forgot" href="#" style="color: #fff">Forgot Password</a>
-                  </div>
+                <p class="text-center text-danger"><%= error %></p>
+                <div id="btn" class="form-group">
+                    <button id="bb" type="submit" class="form-control btn btn-primary submit px-3">Login</button>
                 </div>
-              </form>
+                <p id="errp3" class="text-center text-danger"></p>
+                <div class="form-group d-md-flex">
+                    <div class="w-100 text-md-right">
+                        <a class="forgot" onclick="forgot()" style="color: #fff">Forgot Password</a>
+                    </div>
+                </div>
+            </form>
               <p class="txt w-100 text-center" style="color: white;">&mdash; Or Log In With &mdash;</p>
               <div class="d-flex justify-content-center">
                 <a href="/auth/google" 
@@ -82,7 +84,7 @@
         </div>
       </div>
     </section>
-
+    
     <script src="/js/jquery.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
