--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8346,3 +8346,12 @@ textarea.form-control {
         border: 1px solid transparent;
         background: #fbceb5;
         color: #fff; }
+/* Style for invalid input fields */
+.form-control.invalid {
+  border-color: #ff0000; /* Red border */
+}
+
+/* Optional: Style for the placeholder text in invalid fields */
+.form-control.invalid::placeholder {
+  color: #ff0000; /* Red placeholder text */
+}
