--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -66,7 +66,14 @@
               <span class="menu-title">User Management</span>
             </a>
           </li>
-          
+          <li class="nav-item menu-items">
+            <a class="nav-link" onclick="laodordermanagment()">
+              <span class="menu-icon">
+                <i class="mdi mdi-account-multiple"></i>
+              </span>
+              <span class="menu-title">Order Management</span>
+            </a>
+          </li>
           <li class="nav-item menu-items">
             <a class="nav-link" onclick="loadcatogory()">
               <span class="menu-icon">
