--- a/views/admin/forms/productadd.ejs
+++ b/views/admin/forms/productadd.ejs
@@ -19,6 +19,10 @@
         <input name="price" type="number" class="form-control" placeholder="Price" step="0.01">
       </div>
       <div class="form-group">
+        <label>Offer in %</label>
+        <input name="offer" type="number" class="form-control" placeholder="offer"  step="0.01">
+      </div>
+      <div class="form-group">
         <label>Category</label>
         <select class="form-control" name="category" id="dropdown" name="options">
           <% options.forEach(option => { %>
@@ -40,17 +44,17 @@
       </div>
       <div class="form-group">
         <label>Images</label>
-        <input onchange="cropper(1)" id="image1" type="file" accept="image/*">
+        <input class="form-control" onchange="cropper(1)" id="image1" type="file" accept="image/*">
         <img style="display: none;" src="" alt="" id="prev1">
       </div>
       <div class="form-group">
         <label>Images</label>
-        <input onchange="cropper(2)" id="image2" type="file" accept="image/*">
+        <input class="form-control" onchange="cropper(2)" id="image2" type="file" accept="image/*">
         <img style="display: none;" src="" alt="" id="prev2">
       </div>
       <div class="form-group">
         <label>Images</label>
-        <input onchange="cropper(3)" id="image3" type="file" accept="image/*">
+        <input class="form-control" onchange="cropper(3)" id="image3" type="file" accept="image/*">
         <img style="display: none;" src="" alt="" id="prev3">
       </div>
       <button type="submit" class="btn btn-primary mr-2">Submit</button>
